syntax = "proto3";
package lastmile.common;
option java_package = "io.lastmile.common";
import "google/protobuf/timestamp.proto";

message GeoPoint {
  double lat = 1;
  double lng = 2;
}

message Station {
  string id = 1;
  string name = 2;
  GeoPoint location = 3;
  repeated string nearby_places = 4; // identifiers for nearby areas
}

message UserId { string id = 1; }
